Fix sim, Usabilla position, title spacing, Safari gradient (#8522)

--- a/theme/common.less
+++ b/theme/common.less
@@ -1326,7 +1326,7 @@ p.ui.font.small {
         position: fixed;
         padding: 0;
         margin: 1em;
-        bottom: ~"calc(4.5rem + var(--extra-mobile-sim-padding))" !important;
+        bottom: ~"calc(5.5rem + var(--extra-mobile-sim-padding))" !important;
         right: 0.5rem;
         top: unset;
         left: unset;
@@ -1355,7 +1355,7 @@ p.ui.font.small {
         position: absolute;
         display: block;
         width: 10rem; /* match width of div.simframe */
-        height: 9rem;
+        height: 8rem;
     }
 
     .simPanel {
